# Licita-oes_geral

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ADOPTERS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  config.py  docker-compose.yml  index.html  install.sh  main.py  pncp_licitacoes.py  pncp_list.py  pncp_web_scraper.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml
examples/: pncp_sample.json
